--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# .gitignore for Grails 1.2 and 1.3
-
-# web application files
-/web-app/WEB-INF
-
 # IDE support files
 /.classpath
 /.launch
@@ -12,6 +7,7 @@
 /*.tmproj
 /ivy*
 /eclipse
+*.iml
 
 # default HSQL database files for production mode
 /prodDb.*
@@ -41,3 +37,4 @@
 
 # other
 *.iws
+.gradle/
