--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'groovy'
 apply plugin: 'application'
+apply plugin: 'idea'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
