--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,10 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
   compile 'org.codehaus.groovy:groovy-all:2.0.5'
-  compile 'org.slf4j:slf4j-api:1.7.5'
+  compile 'org.slf4j:slf4j-api:1.7.5', 'joda-time:joda-time:2.3'
   compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.5.2'
 
   testCompile "junit:junit:4.11"
 }
 
-mainClassName = "client"
+mainClassName = "run_client"
